[tool.poetry]
name = "guild-jwt-auth"
version = "0.1.0"
description = ""
authors = ["Eytes <yura.shamanov2000@bk.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
fastapi = "^0.115.6"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
bcrypt = "^4.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
